welcome.lessons.welcome.bat.bool1.HasTeen.scala.error
hasTeen:6: error: Boolean(true) does not take parameters
			return true();
                                   ^hasTeen:9: error: Boolean(true) does not take parameters
				return true();
                                           ^